--- a/.gitignore
+++ b/.gitignore
@@ -1,33 +1,34 @@
-# Gradle build system ignores
+# Gradle
 .gradle/
 build/
+out/
+classes/
 
-# IDE related folders
-.idea/
-.settings/
-*.ipr
-*.iml
-*.iws
-*.code-workspace
-.classpath
-.project
-.vscode/
-*.bbproject
-
-# MCreator workspace
-.mcreator/
-
-# Minecraft client/server files
+# ForgeGradle / Loom
+remappedSrc/
 run/
 
-# MCreator generator ignores
-src/main/resources/assets/*/models/custom
-src/main/resources/assets/*/models/item
-src/main/resources/assets/*/textures/blocks
-src/main/resources/assets/*/textures/items
-src/main/resources/assets/*/textures/models/armor
-src/main/resources/assets/*/textures/*.png
-src/main/resources/assets/*/sounds
+# Eclipse
+*.launch
 
-# Mac OS Folder Metadata
-.DS_Store
+# IntelliJ Idea
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Fleet
+.fleet/
+
+# Visual Studio Code
+.settings/
+.vscode/
+bin/
+.classpath
+.project
+
+# Eclipse JDT LS
+workspace/
+
+# macOS
+*.DS_Store
