--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,17 @@
 # Done to increase the memory available to gradle.
-org.gradle.jvmargs=-Xmx1G
-actualmodid=potatoesAreBetterThanEggs
+org.gradle.jvmargs=-Xmx2G
+org.gradle.parallel=true
+
+# Fabric Properties
+# check these on https://fabricmc.net/develop
+minecraft_version=1.19.2
+#yarn_mappings=1.19.2+build.28
+loader_version=0.14.9
+
+# Mod Properties
+mod_version=2.0.0
+maven_group=net.mcreator
+archives_base_name=Cluttered
+
+# Dependencies
+fabric_version=0.67.1+1.19.2
